--- a/src/components/Sectors/Sectors.scss
+++ b/src/components/Sectors/Sectors.scss
@@ -30,6 +30,17 @@
       }
     }
   }
+
+  .layers {
+    padding: 20px 0 20px 18px;
+    display: none;
+
+    li.layer {
+      position: relative;
+      display: block;
+      width: 100%;
+    }
+  }
 }
 
 .framework-sectors-menu {
@@ -55,7 +66,7 @@
         color: #cb181d;
         display: block;
         font-weight: 600;
-        padding: 10px 15px;
+        padding: 20px 15px;
 
         &:hover,
         &:focus {
@@ -64,6 +75,44 @@
         }
       }
     }
+  }
+
+  .layers {
+    padding: 0 0 10px 18px;
+    display: none;
+
+    li.layer {
+      position: relative;
+      display: block;
+      width: 100%;
+    }
+  }
+
+  .filters {
+    padding: 0 0 10px 18px;
+    display: none;
+
+    li.filter {
+      position: relative;
+      display: block;
+      width: 100%;
+    }
+  }
+
+  input[type='radio'] {
+    margin-right: 5px;
+    position: absolute;
+    left: 0;
+    top: -2px;
+  }
+
+  label {
+    color: #555;
+    font-weight: normal;
+    font-size: 12px;
+    width: 80%;
+    display: block;
+    margin: 0 0 10px 20px;
   }
 }
 
@@ -84,34 +133,6 @@ ul {
   height: 100%;
   top: 10em;
   left: 0;
-}
-
-.layers {
-  padding: 20px 0 20px 18px;
-  display: none;
-
-  li {
-    position: relative;
-    display: block;
-    width: 100%;
-
-    label {
-      color: #555;
-      font-weight: normal;
-      font-size: 12px;
-      width: 80%;
-      display: block;
-      margin: 0 0 10px 20px;
-      text-indent: -18px;
-      text-align: start;
-      white-space: normal;
-    }
-
-    input[type='checkbox'],
-    input[type='radio'] {
-      margin-right: 5px;
-    }
-  }
 }
 
 .open-btn {
